--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </li>
         <li><a href="#" data-page="templates" class="nav-item"><span class="nav-icon">📄</span><span>テンプレート</span></a>
         </li>
+        <li><a href="#" data-page="aistrategy" class="nav-item"><span class="nav-icon">🧠</span><span>AI戦略</span></a>
+        </li>
         <li><a href="#" data-page="settings" class="nav-item"><span class="nav-icon">⚙️</span><span>設定</span></a></li>
       </ul>
     </nav>
